[tool.poetry]
name = "farm"
version = "0.1.0"
description = ""
authors = ["cheeseNA <kurocat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
