[tool.poetry]
name = "farm"
version = "0.1.0"
description = ""
authors = ["cheeseNA <kurocat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"
fastapi-csrf-protect = "^0.2.2"
motor = "^3.1.1"
pyjwt = "^2.6.0"
passlib = "^1.7.4"
python-decouple = "^3.6"
dnspython = "^2.2.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
